[package]
name = "lepton"
version = "0.1.0"
authors = ["David Rajchenbach-Teller <david.teller@univ-orleans.fr>"]
build = "build.rs"
links = "lept"
description = "Idiomatic bindings for the Leptonica C image-processing library."
repository = "https://github.com/Yoric/lepton.rs"
readme = "README.md"
keywords = ["bindings", "image"]
license = "MPL-2.0"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "*"
